WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41900
Missing plug-ins may cause an assertion failure
https://bugs.webkit.org/show_bug.cgi?id=41900
Summary
Missing plug-ins may cause an assertion failure
Jon Honeycutt
Reported
2010-07-08 14:02:45 PDT
If a page tries to embed a plug-in that is not found on the system, an assertion failure may occur.
Attachments
Patch
(4.53 KB, patch)
2010-07-08 14:22 PDT
,
Jon Honeycutt
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Honeycutt
Comment 1
2010-07-08 14:22:53 PDT
Created
attachment 60958
[details]
Patch
Jon Honeycutt
Comment 2
2010-07-08 14:37:27 PDT
Landed in
r62846
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug