WebCore: Missing plug-ins may cause an assertion failure. https://bugs.webkit.org/show_bug.cgi?id=41900

Reviewed by Adele Peterson.

Test: plugins/missing-plugin.html

* plugins/PluginView.cpp:
(WebCore::PluginView::~PluginView):
Check whether m_instance is null before trying to remove it from the
map. Trying to remove a null instance results in an assertion failure.
(WebCore::PluginView::PluginView):
Initialize m_instance to 0, because there is an early return that may
skip its being assigned its proper value.

LayoutTests: Missing plug-ins may cause an assertion failure
https://bugs.webkit.org/show_bug.cgi?id=41900

Reviewed by Adele Peterson.

* plugins/missing-plugin.html: Added.

Canonical link: https://commits.webkit.org/53741@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62846 268f45cc-cd09-0410-ab3c-d52691b4dbfc